# python_lib

./: .gitignore  pyproject.toml  setup.sh
browser_integration/: README.md
browser_integration/app/: background.js  manifest.json
browser_integration/fzf_buku/: fzf_buku  get_buku_bookmarks.bash
browser_integration/native/: browser_integration  browser_integration.json
browser_integration/prom_bookmark_sync/: README.md  notes_extract_links.py  notes_links.py  notes_links_bookmarks_sync.py  read_firefox_bookmarks.py  test_notes_extract_links.py  test_notes_extract_links_data.txt  test_notes_link_bookmarks_sync.py
deprecated/: setup.py
f/: util.py
f/bookmarks/: raindrop.py
f/browser/firefox/: stars_firefox_sync.py
f/f.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
f/notes/: frontmatter_norg.py  globals.py  note.py  note_link_extractor.py  notes_library.py
f/notes/dangerous/: batch_convert_norg_to_yaml_frontmatter.py
f/notes/deprecated/: create_notes_tags.py  notes_housekeeping.py  notes_parse.py  old.py
f/sgsync/: add_worktree.sh  find_git_dirs.py  get.py  globals.py  install  sgsync.py  sync_configs.py  sync_fman_plugins.py  sync_portfolios.py  sync_syms.py  sync_xplr_plugins.py  util.py
f/sgsync/old/: curl.sh  download_stars.py  farm.py  graphql-example.py  permission.py
f/sgsync/tests/: test_sync_nvim_configs.py  test_sync_syms.py
notes/: notes_create_syms.py
tests/: add_raindrop_tags.py  notes_tests.py  notes_tree_test.py  notes_tree_test_2.py
tests/deprecated/: test_links_extract.py
(+5 files in other folders)
